syntax = "proto3";

package grpc_user;

option go_package = "kratos-project/api/grpc_user;grpc_user";
option java_multiple_files = true;
option java_package = "api.grpc_user";

service User {
    rpc UserFind (UserInfoRequest) returns (UserInfo);
    rpc UserList (UserListRequest) returns (UserListReply);
    rpc UserSave (UserSaveRequest) returns (UserSaveReply);
    rpc UserDelete (UserDeleteRequest) returns (UserDeleteReply);
}

// The request message containing the user's id.
message UserInfoRequest {
    int64 id = 1; // 用户ID
    string account = 2; // 用户名称
}

// The user type
enum UserType {
    USER_TYPE_UNSPECIFIED = 0;
    USER_TYPE_OA = 1;
    USER_TYPE_NORMAL = 2;
}

// The user status
enum UserStatus {
    USER_STATUS_UNSPECIFIED = 0;
    USER_STATUS_ENABLE = 1;
    USER_STATUS_DISABLE = 2;
}

// The response message containing the user info
message UserInfo {
    int64 id = 1; // 用户ID
    string account = 2; // 用户账号
    string password = 3; // 用户密码
    string name = 4; // 用户名称
    string avatar = 5; // 用户头像地址
    UserType type = 6; // 用户类型
    UserStatus status_is = 7; // 用户状态
    string created_at = 8; // 添加时间
    string updated_at = 9; // 修改时间
}

// The request message containing the user's list
message UserListRequest {
    int64 page = 1; // 页码
    int64 page_size = 2; // 每页数量
    string account = 3; // 用户账号
    string name = 4; // 用户名称
    UserType type = 5; // 用户类型
    UserStatus status_is = 6; // 用户状态
}

// The response message containing the user list
message UserListReply {
    repeated UserInfo list = 1;
    int64 total = 2;
}

// The request message containing the user's info
message UserSaveRequest {
    int64 id = 1; // 用户ID
    string account = 2; // 用户账号
    string password = 3; // 用户密码
    string name = 4; // 用户名称
    string avatar = 5; // 用户头像地址
    UserType type = 6; // 用户类型
    UserStatus status_is = 7; // 用户状态
}

// The response message containing the user save
message UserSaveReply {
    int64 id = 1;
}

// The request message containing the user's id
message UserDeleteRequest {
    int64 id = 1;
    repeated int64 ids = 2;
}

// The response message containing the user delete
message UserDeleteReply {
    repeated int64 ids = 1;
}