syntax = "proto3";

package http_app;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "kratos-project/api/http_app;http_app";

service User {
	rpc UserLogin (UserLoginRequest) returns (UserLoginReply) {
		option (google.api.http) = {
			post: "/app/login"
			body: "*"
		};
	};
	rpc UserInfo (UserInfoRequest) returns (UserInfoReply) {
		option (google.api.http) = {
			get: "/app/user"
		};
	};
}

message UserLoginRequest {
	string account = 1 [(validate.rules).string = {min_len: 1; max_len: 20}];
	string password = 2 [(validate.rules).string = {min_len: 1}];
}

message UserLoginReply {
	string token = 1;
}

message UserLogoutRequest {

}

message UserLogoutReply {}

message UserInfoRequest {

}

message UserInfoReply {
	int64 id = 1;
	string account = 2;
	string name = 3;
	string avatar = 4;
}